Add extra logging to spot the class type